Update verifee app structure and sync api schemas
